# mtws

./: .gitignore  AGENTS.md  AGENT_REFERENCE.md  CMakeLists.txt  LICENSE  README.md  next_batch.md
.ai/skills/: README.md
.ai/skills/mtws-oscillator-design/: SKILL.md
.ai/skills/mtws-oscillator-design/references/: design_checklist.md  repo_map.md
.ai/skills/mtws-oscillator-integration/: SKILL.md
.ai/skills/mtws-oscillator-integration/references/: integration_workflow.md
.ai/skills/mtws-oscillator-solo/: SKILL.md
.ai/skills/mtws-oscillator-solo/references/: solo_workflow.md
.codex/skills/mtws-oscillator-design/: SKILL.md
.codex/skills/mtws-oscillator-design/agents/: openai.yaml
.codex/skills/mtws-oscillator-design/references/: design_checklist.md  repo_map.md
.codex/skills/mtws-oscillator-integration/: SKILL.md
.codex/skills/mtws-oscillator-integration/agents/: openai.yaml
.codex/skills/mtws-oscillator-integration/references/: integration_workflow.md
.codex/skills/mtws-oscillator-solo/: SKILL.md
.codex/skills/mtws-oscillator-solo/agents/: openai.yaml
docs/: CODEX_OLD.md  CORE_OFFLOAD_PLAN.md  HOST_PREVIEW.md  MTWS_6OSC_MASTER_PLAN.md  MTWS_TODO.md  MTWS_USER_GUIDE.md  Suggested Optimisations 1.md  Suggested Optmisations 2.md  USER_GUIDE.md
docs/engines/: bender.md  cumulus.md  din_sum.md  floatable.md  losenge.md  sawsome.md
docs/images/: bender.af  cumulus.af  din_sum.af  floatble.af  losenge.af  sawsome.af
examples/midi_device/: main.cpp  usb_descriptors.c
examples/midi_device_host/: main.cpp
examples/midi_host/: tusb_config.h
examples/passthrough/: main.cpp
examples/usb_serial/: main.cpp
knots/: knots.uf2
knots/solo_engines/bender/: bender_solo_engine.cpp  bender_solo_engine.h  main.cpp
knots/solo_engines/cumulus/: cumulus_solo_engine.cpp  cumulus_solo_engine.h  main.cpp
knots/solo_engines/din_sum/: din_sum_solo_engine.cpp  din_sum_solo_engine.h  main.cpp
knots/solo_engines/floatable/: WAVETABLE.md  floatable_solo_engine.cpp  floatable_solo_engine.h  floatable_wavetable_1_original_64x512.h  floatable_wavetable_3_original_64x256.h  main.cpp  main_stereo.cpp  wavetable_data.h
knots/solo_engines/losenge/: losenge_solo_engine.cpp  losenge_solo_engine.h  main.cpp
knots/solo_engines/sawsome/: main.cpp  sawsome_solo_engine.cpp  sawsome_solo_engine.h
knots/solo_engines/solo_common/: solo_app_base.h  solo_control_router.cpp
knots/src/: main.cpp
knots/src/core/: control_router.cpp  control_router.h  midi_worker.cpp  midi_worker.h
knots/src/engines/: bender_engine.cpp  bender_engine.h  cumulus_engine.cpp  cumulus_engine.h  din_sum_engine.cpp  din_sum_engine.h  engine_interface.h  engine_registry.cpp  engine_registry.h  floatable_engine.cpp  floatable_engine.h  losenge_engine.cpp  losenge_engine.h  sawsome_engine.cpp  sawsome_engine.h
knots/src/wavetables/: floatable_bank_1_16x256.h
prex/additive/: main.cpp
prex/additive_8_working/: README.md
prex/additive_alias16/: README.md  main.cpp
prex/bender/: bender_solo_engine.cpp  bender_solo_engine.h  main.cpp
prex/centroid/: README.md  main.cpp
prex/centroid_2/: approach.md  main.cpp  pitch_phase_lut.h
prex/centroid_3/: CORE_OFFLOAD_PLAN.md
prex/centroid_3/sine_wave_lookup/: main.cpp
prex/cumulus/: cumulus_solo_engine.cpp  cumulus_solo_engine.h  main.cpp
prex/din_sum/: din_sum_solo_engine.cpp  din_sum_solo_engine.h  main.cpp
prex/floatable/: WAVETABLE.md  floatable_solo_engine.cpp  floatable_solo_engine.h  floatable_wavetable_1_reversed_64x256.h  floatable_wavetable_2_original_64x256.h  floatable_wavetable_3_reversed_64x512.h  floatable_wavetable_4_reversed_64x256.h  main.cpp
prex/losenge/: losenge_solo_engine.cpp  losenge_solo_engine.h  main.cpp
prex/mtws/: main.cpp
prex/mtws/core/: control_router.cpp  control_router.h  midi_worker.cpp  midi_worker.h  shared_state.h
prex/mtws/dsp/: sine_lut.h
prex/mtws/engines/: additive_engine.cpp  additive_engine.h  bender_engine.cpp  bender_engine.h  cumulus_engine.cpp  cumulus_engine.h  din_sum_engine.cpp  din_sum_engine.h  engine_interface.h  engine_registry.cpp  engine_registry.h  floatable_engine.cpp  floatable_engine.h  losenge_engine.cpp  losenge_engine.h  placeholder_engine.cpp  placeholder_engine.h  sawsome_engine.cpp  sawsome_engine.h  wavetable_engine.cpp  wavetable_engine.h
prex/mtws/usb/: tusb_config.h  usb_descriptors.c
prex/mtws/wavetables/: floatable_bank_2_16x256.h  floatable_bank_3_16x256.h  floatable_bank_4_16x256.h  wavetable_bank_b_64x512.h
prex/mvp/: main.cpp
prex/sawsome/: main.cpp  sawsome_solo_engine.cpp  sawsome_solo_engine.h
prex/solo_common/: solo_app_base.h  solo_control_router.cpp  solo_control_router.h
prex/wavetable/: WAVETABLE.md  main.cpp  wavetable_bank_a_64x512.h
reference/10_twists/: resources.cc  twists.cc  ui.cc  ui.h  usb_descriptors.cc  usb_worker.cc
reference/10_twists/drivers/: calibration.h  cv_out.h  gate_input.cc  gate_input.h  switch.cc  switch.h
reference/utility_pair/: main.cpp
reference/workshop_computer_examples/calibrated_cv_out/: main.cpp
reference/workshop_computer_examples/midi_host/: main.cpp
reference/workshop_computer_examples/sample_upload/: generate_sample_uf2.html
reference/workshop_computer_examples/web_interface/: interface.html  main.cpp
research_docs/: feasibility_matrix.md  index.md  pdf_manifest.md  phase_distortion_visuals.ipynb  prototype_roadmap.md  start_notebook.sh
research_docs/notes/: chaotic_oscillators.md  feedback_am.md  karplus_strong.md  modal_synthesis.md  phase_distortion.md  pulsar_synthesis.md  scanned_synthesis.md  wppm.md
tools/floatable_wavetable_browser/: 1_floatable_selection_16_b.json  3_floatable_selection_16_fm.json  4_floatable_selection_16_snippets.json  README.md  app.js  generate_akwf_manifest.py  index.html  index_full.html  styles.css
tools/floatable_wavetable_creator/: 2_floatable_selection_16.json  README.md  json_to_header.py
tools/host_preview/: CMakeLists.txt
tools/host_preview/src/: main.cpp
tools/input_monitor/src/: main.cpp
tools/input_monitor_cli/: README.md  main.py
(+13 files in other folders)
